testdata/Call.def/Call.prop_m/Call.prop_m.3.1.check
// hasErrors: true
-- Error: target/testdata/Call.def/Call.prop_m.scala:4:6 -----------------------
4 |  prop()
  |  ^^^^^^
  |  missing argument for parameter i of method apply: (i: Int): Char
1 error found
